Changes in Version 1.8.1
  - Removed unused dplyr import

Changes in Version 1.8
  - The 'centralityPlot' and 'clusteringPlot' functions now use 'raw0' as default for the 'scale' argument, meaning that centrality and clustering coefficients are no longer standardized to z-scores by default.

Changes in Version 1.7.1
  - Fixed a bug with the flow() function
  - Added theme = "pride"

Changes in Version 1.7.0
  - The 'centrality()' function now includes R-squared (predictability)
  - 'qgraphAnnotate' has been removed due to CRAN removal of sendplot
  - Fixed a bug when using edges colored as probabilities with more than 20 nodes
  - the 'probCol' argument now defaults to "black"
  - Removed several dependencies
  - Removed 'as_ggraph' to reduce dependencies

Changes in Version 1.6.9
  - Fixed a bug where using qgraph on the output of qgraph did not use all arguments correctly

Changes in Version 1.6.8
  - Fixed a bug with legend not showing when edge labels are used.

Changes in Version 1.6.7
  - node labels are now colored white for lighter nodes with theme = "gray"
  - Added argument label.color.split

Changes in Version 1.6.6
  - Fixed a bug where the diagonal of undirected graphs was counted twice in getWmat
  - Fixed a bug with bnlearn as input

Changes in Version 1.6.5
  - Removed findGraph

Changes in Version 1.6.4
  - Added te as_ggraph function to transform a qgraph object into a ggraph object
  - forcePD now defaults to FALSE in cor_auto
  - Added the argument edge.label.margin to qgraph
  - Fixed a bug with fade not working as matrix/vector when edge.colors are ised

Changes in Version 1.6.3
  - Updated warning message for when the densest network is selected.
  - Added an option countDiagonalPars to ggmFit to count diagonal of the network as parameters, now set to TRUE by default.
  - Added support for drawing confidence regions using pie charts with the following arguments:
    - pieCImid, pieCIlower, pieCIupper, pieCIpointcex, pieCIpointcex